--- a/Lands43/Lands/Lands/Views/LandsPage.xaml
+++ b/Lands43/Lands/Lands/Views/LandsPage.xaml
@@ -35,6 +35,9 @@
                                 HasShadow="True"
                                 Margin="4"
                                 Padding="7">
+                                <Frame.GestureRecognizers>
+                                    <TapGestureRecognizer Command="{Binding SelectLandCommand}"/>
+                                </Frame.GestureRecognizers>
                                 <Grid>
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="*"/>
